app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app
          image: yotamdavid/app_ferari:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "1000m"   # Minimum required CPU
              memory: "2Gi"  # Increased memory to 2Gi
            limits:
              cpu: "2000m"   # Maximum allowed CPU
              memory: "4Gi"  # Increased memory to 4Gi
