db-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db-pod
spec:
  volumes:
    - name: init-sql-volume
      persistentVolumeClaim:
        claimName: db-init-sql
  containers:
    - name: db-container
      image: mysql:latest
