kub_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "yotamdavid/ferari_website:latest"
  template:
    metadata:
      labels:
        app: "yotamdavid/ferari_website:latest"
    spec:
      containers:
      - name: my-container
        image: nginx:latest
        ports:
        - containerPort: 8080
