mysql-client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-test-pod
spec:
  containers:
    - name: mysql-client
      image: mysql:latest
      command: ['sh', '-c', 'while true; do mysql -h mysql-service -u root -pYOUR_PASSWORD -e "SHOW DATABASES"; sleep 10; done']
