test_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: docker-app
  template:
    metadata:
      labels:
        app: docker-app
    spec:
      containers:
        - name: nginx-container
          image: yotamdavid/ferari_docker:latest
          ports:
            - containerPort: 80
