all.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: web
  ports:
    - port: 5000
      targetPort: 5000
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: web
  replicas: 1
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: yotamdavid/app_ferari:latest
          ports:
            - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: db-service
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-service
spec:
  selector:
    matchLabels:
      app: db-service
  replicas: 1
  template:
    metadata:
      labels:
        app: db-service
    spec:
      containers:
        - name: db-service
          image: yotamdavid/appdatabase:latest
          command:
            - --default-authentication-plugin=mysql_native_password
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/mysql
            - name: init-sql
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-data-claim
        - name: init-sql
          configMap:
            name: init-sql-config
