kub_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: yotamdavid-ferari-website
  type: LoudBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
