service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app-pod
  ports:
    - protocol: TCP
      port: 5000
