service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: db-pod
  ports:
    - protocol: TCP
      port: 3306
