test_servis.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-app-service
spec:
  selector:
    app: docker-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
