network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-app-to-db
spec:
  podSelector:
    matchLabels:
      app: flask-app
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: mysql
  policyTypes:
    - Ingress
